# protect-the-rabbit

./: Cargo.toml  LICENSE  Makefile.toml  README.md  rustfmt.toml
.github/workflows/: build.yaml  release.yaml
src/: limit-consumers.rs  main.rs
