[package]
name = "protect-the-rabbit"
version = "0.1.0"
authors = ["LOU Xun <aquarhead@ela.build>"]
edition = "2018"

[dependencies]
redbpf = "1.3"
anyhow = "1.0"
# BPF
redbpf-macros = { version = "1.3", optional = true }
redbpf-probes = { version = "1.3", optional = true }
memoffset = { version = "0.6", optional = true }

[features]
default = []
probes = ["redbpf-macros", "redbpf-probes", "memoffset"]

[[bin]]
name = "limit"
path = "src/limit-consumers.rs"
required-features = ["probes"]
